--- a/conf/alis.conf
+++ b/conf/alis.conf
@@ -80,7 +80,7 @@ DISPLAY_DRIVER_HARDWARE_ACCELERATION_INTEL="intel-media-driver !libva-intel-driv
 ## ROOT_PASSWORD root user password. If "ask" password alis asks for a secure password.
 TIMEZONE="/usr/share/zoneinfo/Europe/Berlin"
 LOCALES=("en_US.UTF-8 UTF-8")
-LOCALE_CONF=("")
+LOCALE_CONF=("LANG=en_US.UTF-8")
 KEYMAP="KEYMAP=de"
 KEYLAYOUT="de"
 KEYMODEL=""
@@ -125,7 +125,7 @@ CUSTOM_SHELL="bash !zsh !dash !fish" # (single)
 
 # desktop
 ## DESKTOP_ENVIRONMENT installs a desktop environment.
-DESKTOP_ENVIRONMENT="!gnome !kde !xfce !mate !cinnamon !lxde i3-wm !i3-gaps !deepin" # (single)
+DESKTOP_ENVIRONMENT="!gnome !kde !xfce !mate !cinnamon !lxde !i3-wm !i3-gaps !deepin" # (single)
 
 # packages (all multiple)
 ## PACKAGES_MULTILIB configures multilib repository for pacman and install multilib packages for display driver
